Feat (Mutations): Adds mutations for goals and adds tests.